--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.FitKart"
         tools:targetApi="31">
         <activity
-            android:name=".OnBoardingActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".ui.base.OnBoardingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.base.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.home.HomeMainActivity"
             android:exported="true"
             android:theme="@style/Theme.FitKart" />
     </application>
